--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express-session": "^1.15.6",
     "method-override": "^3.0.0",
     "mongodb": "^3.1.12",
-    "mongoose": "^5.4.5"
+    "mongoose": "^5.4.5",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
